--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,71 @@
-h1 {
-	font-size: 100;
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
+h1,h2,h3 {
+	font-family: 'Parisienne', cursive;
+}
+#home {
+	background-color: #3E454C;
+	color: #FFF6E5;
+
+	h1 {
+		font-size: 5rem;
+	}
+
+	.school-pic {
+		margin: 3rem auto 2rem auto;
+		display: block;
+		max-width: 100%;
+	}
+
+	p {
+		font-size: 1.55rem;
+	}
+
+}
+
+@media (min-width: 768px) {
+	section {
+		height: 100vh;
+	}
+
+	.container {
+		position: relative;
+  	top: 50%;
+		transform: translateY(-50%);
+	}
+}
+
+#details {
+	text-align: center;
+	background-color: rgb(255, 246, 229);
+
+	@media (min-width: 769px) {
+		background: url(../img/cranwell.jpg);
+		background-size: cover;
+	}
+	.text-box {
+		background-color: rgb(255, 246, 229);
+		color: #3E454C;
+		border-radius: 3px;
+		padding: 5rem 0;
+		@media (min-width: 768px) {
+			padding: 2rem;
+			background-color: rgba(255, 246, 229, 0.9);
+		}
+		ul {
+			padding: 0;
+		}
+		li {
+			list-style: none;
+		}
+	}
+}
+.extra-margin-bottom {
+	margin-bottom: 3rem;
+}
+
+.extra-margin-top {
+	margin-top: 3rem;
 }
