--- a/css/main.css
+++ b/css/main.css
@@ -7136,6 +7136,7 @@ button.close {
 }
 body {
   font-family: 'Montserrat', sans-serif;
+  color: #3E454C;
 }
 
 h1, h2, h3 {
@@ -7196,6 +7197,57 @@ h1, h2, h3 {
 }
 #details .text-box li {
   list-style: none;
+}
+
+#groomsmen {
+  background-color: #C0E8FF;
+}
+
+#bridesmaids {
+  background-color: #FFB7C4;
+}
+
+.wedding-party ul {
+  padding: 0;
+  margin: 0;
+}
+.wedding-party li {
+  list-style: none;
+}
+.wedding-party .thumbnail {
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 2rem;
+  background-color: #3E454C;
+  display: none;
+}
+@media (min-width: 768px) {
+  .wedding-party .thumbnail {
+    display: inline-block;
+  }
+}
+.wedding-party img.thumbnail.active {
+  background-color: #fff6e5;
+}
+.wedding-party .featureImage img {
+  border-radius: 3px;
+  border: 3px solid #3E454C;
+}
+.wedding-party .weddingPartyMember {
+  cursor: pointer;
+}
+@media (min-width: 768px) {
+  .wedding-party span.weddingPartyMember {
+    padding-bottom: 1rem;
+  }
+}
+.wedding-party span.weddingPartyMember.active {
+  border-bottom: 2px solid #fff6e5;
+  transition: border-color 0.5s ease;
+}
+
+img {
+  max-width: 100%;
 }
 
 .extra-margin-bottom {
