--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,6 @@
 body {
 	font-family: 'Montserrat', sans-serif;
+	color: #3E454C;
 }
 
 h1,h2,h3 {
@@ -62,6 +63,82 @@ h1,h2,h3 {
 		}
 	}
 }
+#groomsmen {
+	background-color: #C0E8FF;
+}
+
+#bridesmaids {
+	background-color: #FFB7C4;
+}
+.wedding-party {
+	ul {
+		padding: 0;
+		margin: 0;
+	}
+	li {
+		list-style: none;
+	}
+	.thumbnail {
+		border-radius: 50%;
+		display: inline-block;
+		margin-right: 2rem;
+		background-color: #3E454C;
+		display: none;
+		@media (min-width: 768px) {
+			display: inline-block;
+		}
+	}
+
+	img.thumbnail.active {
+			background-color: #fff6e5;
+		}
+
+	.featureImage img { 
+		border-radius: 3px;
+		border: 3px solid #3E454C;
+	}
+
+	.weddingPartyMember {
+		cursor: pointer;
+	}
+
+	@media (min-width: 768px) {
+		span.weddingPartyMember {
+			padding-bottom: 1rem;
+		}
+	}
+
+	span.weddingPartyMember.active {
+		border-bottom: 2px solid #fff6e5;
+		transition: border-color 0.5s ease; 
+	}
+}
+// .weddingPartyMember.active:after {
+//     display: block;
+//     position: relative;
+//     left: 128px;
+//     bottom: 50px;
+//     height: 3px;
+//     width: 50%;
+// 	  background-color: #98004a;
+// 	  content: "";
+//     -webkit-animation:
+//     borderAnimate 0.5s ease-in-out;
+// }
+
+// @-webkit-keyframes borderAnimate {
+//   from {
+//     width: 0;
+//   }
+//   to {
+//     width: 50%;
+//   }
+// }
+
+img {
+	max-width: 100%;
+}
+
 .extra-margin-bottom {
 	margin-bottom: 3rem;
 }
