--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -18,6 +18,7 @@ h1,h2,h3 {
 		margin: 3rem auto 2rem auto;
 		display: block;
 		max-width: 100%;
+		border-radius: 5px;
 	}
 
 	p {
@@ -65,10 +66,12 @@ h1,h2,h3 {
 }
 #groomsmen {
 	background-color: #C0E8FF;
+	padding-bottom: 3rem;
 }
 
 #bridesmaids {
-	background-color: #FFB7C4;
+	background-image: linear-gradient(#FFB7C4, #f2dede);
+	padding-bottom: 3rem;
 }
 .wedding-party {
 	ul {
@@ -77,6 +80,7 @@ h1,h2,h3 {
 	}
 	li {
 		list-style: none;
+		margin: 0.5rem 0;
 	}
 	.thumbnail {
 		border-radius: 50%;
