--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -6,6 +6,13 @@ body {
 h1,h2,h3 {
 	font-family: 'Parisienne', cursive;
 }
+
+h3 {
+	font-size: 32px;
+}
+h2 {
+	font-size: 45px;
+}
 #home {
 	background-color: #3E454C;
 	color: #FFF6E5;
@@ -97,7 +104,7 @@ h1,h2,h3 {
 			background-color: #fff6e5;
 		}
 
-	.featureImage img { 
+	.featureImage img {
 		border-radius: 3px;
 		border: 3px solid #3E454C;
 	}
@@ -114,7 +121,7 @@ h1,h2,h3 {
 
 	span.weddingPartyMember.active {
 		border-bottom: 2px solid #fff6e5;
-		transition: border-color 0.5s ease; 
+		transition: border-color 0.5s ease;
 	}
 }
 // .weddingPartyMember.active:after {
