new section size working

--- a/css/main.css
+++ b/css/main.css
@@ -7163,17 +7163,20 @@ h2 {
   font-size: 1.55rem;
 }
 
-@media (min-width: 768px) {
-  section {
-    height: 100vh;
-  }
-
-  .container {
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-  }
+section {
+  width: 100%;
+  padding: 0 7%;
+  display: table;
+  margin: 0;
+  max-width: none;
+  height: 100vh;
 }
+
+.content {
+  display: table-cell;
+  vertical-align: middle;
+}
+
 #details {
   text-align: center;
   background-color: #fff6e5;
